--- a/myshop/authproj/templates/authproj/sign_in.html
+++ b/myshop/authproj/templates/authproj/sign_in.html
@@ -1,18 +1,19 @@
 {% extends "shop/base.html" %}
 {% load bootstrap3 %}
 {% load static %}
+{% load i18n %}
 
 {% block title %}
-  Login page
+  {% trans 'Login page' %}
 {% endblock %}
 
 {% block content %}
-  <h1>Login page</h1>
+  <h1>{% trans 'Login page' %}</h1>
 
     <form method="POST">
                 {%csrf_token%}
                 {%bootstrap_form form%}
-            <button type="submit" class="btn btn-red pull-right">Sign in</button>
+            <button type="submit" class="btn btn-red pull-right">{% trans 'Sign in' %}</button>
     </form>
 
 {% endblock %}
