--- a/myshop/cart/templates/cart/detail.html
+++ b/myshop/cart/templates/cart/detail.html
@@ -3,11 +3,11 @@
 {% load static %}
 
 {% block title %}
-  Your shopping cart
+  {% trans 'Your shopping cart' %}
 {% endblock %}
 
 {% block content %}
-  <h1>Your shopping cart</h1>
+  <h1>{% trans 'Your shopping cart' %}</h1>
   <table class="cart">
     <thead>
       <tr>
@@ -28,32 +28,32 @@
                 <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'img/no_image.png' %}{% endif %}"  width="70" height="50">
               </a>
             </td>
-            <td>{{ product.name }}</td>
+            <td>{% trans product.name %}</td>
             <td>
               <form action="{% url 'cart:cart_add' product.id %}" method="post">
                 {{ item.update_quantity_form.quantity }}
                 {{ item.update_quantity_form.update }}
-                <input type="submit" value="Update">
+                <input type="submit" value="{% trans 'Update' %}">
                 {% csrf_token %}
               </form>
             </td>
-            <td><a href="{% url 'cart:cart_remove' product.id %}">Remove</a></td>
-            <td class="num">uah{{ item.price }}</td>
-            <td class="num">uah{{ item.total_price }}</td>
+            <td><a href="{% url 'cart:cart_remove' product.id %}">{% trans 'Remove' %}</a></td>
+            <td class="num">{{ item.price }}{% trans 'uah' %}</td>
+            <td class="num">{{ item.total_price }}{% trans 'uah' %}</td>
           </tr>
         {% endwith %}
       {% endfor %}
       <tr class="total">
-        <td>Total</td>
+        <td>{% trans 'Total' %}</td>
         <td colspan="4"></td>
-        <td class="num">uah{{ cart.get_total_price }}</td>
+        <td class="num">{{ cart.get_total_price }}{% trans 'uah' %}</td>
       </tr>
     </tbody>
   </table>
   <p class="text-right">
-    <a href="{% url 'shop:product_list' %}" class="button light">Continue shopping</a>
+    <a href="{% url 'shop:product_list' %}" class="button light">{% trans 'Continue shopping' %}</a>
     <a href="{% url 'orders:order_create' %}" class="button">
-      Create order
+      {% trans 'Create order' %}
     </a>
   </p>
 {% endblock %}
