--- a/myshop/orders/templates/orders/order/create.html
+++ b/myshop/orders/templates/orders/order/create.html
@@ -1,28 +1,29 @@
 {% extends "shop/base.html" %}
+{% load i18n %}
 
 {% block title %}
-  Create order
+  {% trans 'Create order' %}
 {% endblock %}
 
 {% block content %}
-  <h1>Create order</h1>
+  <h1>{% trans 'Create order' %}</h1>
     
   <div class="order-info">
-    <h3>Your order</h3>
+    <h3>{% trans 'Your order' %}</h3>
     <ul>
       {% for item in cart %}
         <li>
-          {{ item.quantity }}x {{ item.product.name }} 
-          <span>uah{{ item.total_price }}</span>
+          {{ item.quantity }}x {% trans item.product.name %}
+          <span>{{ item.total_price }}{% trans 'uah' %}</span>
         </li>
       {% endfor %}
     </ul>
-    <p>Total: uah{{ cart.get_total_price }}</p>
+    <p>Total: {{ cart.get_total_price }}{% trans 'uah' %}</p>
   </div>
     
   <form action="." method="post" class="order-form">
     {{ form.as_p }}
-    <p><input type="submit" value="Place order"></p>
+    <p><input type="submit" value="{% trans 'Place order' %}"></p>
     {% csrf_token %}
   </form>
 {% endblock %}
