--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -18,11 +18,14 @@
     {% get_available_languages as LANGUAGES %}
     {% get_language_info_list for LANGUAGES as languages %}
     {% for language in languages %}
-            <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
-               class="{% if language.code == LANGUAGE_CODE %}selected{% endif %}"
-               lang="{{ language.code }}">
-                {{ language.name_local }}
             </a>
+            <ul class="text-right">
+                <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
+                   class="{% if language.code == LANGUAGE_CODE %}selected{% endif %}"
+                   lang="{{ language.code }}">
+                   {{ language.name_local }}
+                </a>
+            </ul>
     {% endfor %}
     <!--<form action="{% url 'i18n:set_language' %}" method="POST">{% csrf_token %}
       <input type="hidden" name="text" value="{{ redirect_to }}">
