A PayPal gateway was added for pay orders in my shop

--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -7,7 +7,7 @@
 <head>
   <meta charset="utf-8" />
   <title>{% block title %}{% trans "Coffee/tea shop" %}{% endblock %}</title>
-  <link href="{% static 'css/base.cs' %}" rel="stylesheet">
+  <link href="{% static 'css/base.css' %}" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 </head>
 <body>
