Changed forms for adding product to cart. TypedChoiceField now is setted dynamically, available number of products are free in stock

--- a/myshop/shop/templates/shop/product/list.html
+++ b/myshop/shop/templates/shop/product/list.html
@@ -32,4 +32,6 @@
       </div>
     {% endfor %}
   </div>
+  <div>{% for product in availible_products %} {{product.stock}} {% endfor %}</div>
+
 {% endblock %}
