--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -21,13 +21,13 @@
             </a>
             <ul class="text-right">
                 <a href="/{{ language.code }}{{ request.get_full_path|slice:'3:' }}"
-                   class="{% if language.code == LANGUAGE_CODE %}selected{% endif %}"
+                   {% if language.code == LANGUAGE_CODE %}class="selected"{% endif %}
                    lang="{{ language.code }}">
                    {{ language.name_local }}
                 </a>
             </ul>
     {% endfor %}
-    <form action="{% url 'i18n:set_language' %}" method="POST">{% csrf_token %}
+    <!--<form action="{% url 'i18n:set_language' %}" method="POST">{% csrf_token %}
       <input type="hidden" name="text" value="{{ redirect_to }}">
       <select name="language" id="">
         {% get_available_languages as LANGUAGES %}
@@ -41,7 +41,7 @@
       <input type="submit" value="Set language">
 
 
-    </form>
+    </form>-->
   </div>
   <div id="subheader">
     <div class="cart">
