--- a/myshop/shop/templates/shop/base.html
+++ b/myshop/shop/templates/shop/base.html
@@ -27,7 +27,7 @@
                 </a>
             </ul>
     {% endfor %}
-    <!--<form action="{% url 'i18n:set_language' %}" method="POST">{% csrf_token %}
+    <form action="{% url 'i18n:set_language' %}" method="POST">{% csrf_token %}
       <input type="hidden" name="text" value="{{ redirect_to }}">
       <select name="language" id="">
         {% get_available_languages as LANGUAGES %}
@@ -41,7 +41,7 @@
       <input type="submit" value="Set language">
 
 
-    </form>-->
+    </form>
   </div>
   <div id="subheader">
     <div class="cart">
